# dotfiles-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: crates.yml  rust.yml
src/: main.rs
src/lib/: brew.rs  cache.rs  cargo.rs  env.rs  favourites.rs  ghrafont.rs  ghratask.rs  ghrtask.rs  goget.rs  pip.rs  python.rs  rust.rs  task.rs  version.rs
src/lib/ssh/: consts.rs  fields.rs  mod.rs
src/tasks/: alacritty.rs  atlantis.rs  atom.rs  bash.rs  bashprofile.rs  bashrc.rs  bazel.rs  brew.rs  brewbundle.rs  brewfile.rs  cascadiacode.rs  dep.rs  dotfiles.rs  fccache.rs  fira.rs  firacode.rs  git.rs  gitleaks.rs  gitsizer.rs  goget.rs  golang.rs  googlecloudsdk.rs  hack.rs  hadolint.rs  hasklig.rs  hyper.rs  inputrc.rs  inter.rs  jq.rs  local.rs  macos.rs  minikube.rs  mod.rs  node.rs  nodejs.rs  npm.rs  overpass.rs  pip.rs  plex.rs  profile.rs  (+23 more)
src/utils/: archive.rs  env.rs  fs.rs  git.rs  github.rs  golang.rs  http.rs  nodejs.rs  process.rs  ssh.rs  strings.rs
tests/fixtures/: foo.txt.tar  github-releases.json  ssh_config  ssh_config.input.txt  ssh_config.output.txt
