[package]
name = "jokeyrhyme-dotfiles"
description = "read my dotfiles repository and do stuff"
version = "0.34.0"
edition = "2018"
authors = ["Ron Waldon <jokeyrhyme@gmail.com>"]
documentation = "https://github.com/jokeyrhyme/dotfiles-rs#readme"
homepage = "https://github.com/jokeyrhyme/dotfiles-rs"
repository = "https://github.com/jokeyrhyme/dotfiles-rs"
include = [
  "src/**/*.rs",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "1.9"
clap = "2.33"
dirs = "2.0"
Inflector = "0.11.4"
libflate = "0.1.27"
mktemp = "0.4.0"
regex = "1.3"
reqwest = "0.9.24"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8.1"
subprocess = "0.1.18"
tar = "0.4.26"
textwrap = "0.11.0"
toml = "0.5.6"
which = "3.0"
zip = "0.5.5"

[dev-dependencies]

