[package]
name = "jokeyrhyme-dotfiles"
description = "read my dotfiles repository and do stuff"
version = "0.37.0"
edition = "2018"
authors = ["Ron Waldon <jokeyrhyme@gmail.com>"]
documentation = "https://github.com/jokeyrhyme/dotfiles-rs#readme"
homepage = "https://github.com/jokeyrhyme/dotfiles-rs"
repository = "https://github.com/jokeyrhyme/dotfiles-rs"
include = [
  "src/**/*.rs",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "1.9"
clap = "2.33"
dirs = "3.0"
Inflector = "0.11"
libflate = "1.0"
mktemp = "0.4"
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
subprocess = "0.2"
tar = "0.4"
textwrap = "0.12"
toml = "0.5"
which = "4.0"
zip = "0.5"

[dev-dependencies]

